syntax = "proto3";

package proto;

import "google/api/annotations.proto";

service SponsorService {
    /*
        ================================================================
                        ADMIN RPC CALLS
        ================================================================
    */
    rpc CreateAdmin(CreateAdminRequest) returns(CreateAdminResponse) {
        option (google.api.http) = {
            post: "/v1/sponsor/admin"
            body: "*"
        };
    }
    rpc GetAdmin(GetAdminRequest) returns(GetAdminResponse) {
        option (google.api.http) = {
            get: "/v1/sponsor/admin/{adminID}"
        };
    }
    rpc DeleteAdmin(DeleteAdminRequest) returns(DeleteAdminResponse) {
        option (google.api.http) = {
            delete: "/v1/sponsor/admin/{adminID}"
        };     
    }
    rpc LoginAdmin(LoginAdminRequest) returns(LoginAdminResponse) {
        option (google.api.http) = {
            post: "/v1/sponsor/admin/login"
            body: "*"
        };
    }


    /*
        ================================================================
                        SPONSOR RPC CALLS
        ================================================================
    */
    rpc CreateSponsor(CreateSponsorRequest) returns(CreateSponsorResponse) {
        option (google.api.http) = {
            post: "/v1/sponsor"
            body: "*"
        };
    }
    rpc CreateCompany(CreateCompanyRequest) returns (CreateCompanyResponse) {
        option (google.api.http) = {
            post: "/v1/sponsor/company"
            body: "*"
        };
    }
}

message CreateSponsorRequest {
    Sponsor sponsor = 1;
}

message CreateSponsorResponse {
    Sponsor sponsor = 1;
}

message CreateCompanyRequest {
    string name = 1;
    string logo = 2;
}

message CreateCompanyResponse {
    Company company = 1;
}

message LoginAdminRequest {
    string email = 1;
    string password = 2;
}
message LoginAdminResponse {
    string token = 1;
    Admin admin = 2;
}

message DeleteAdminRequest {
    string adminID = 1;
}

message DeleteAdminResponse {
    bool ok = 1;
}

message CreateAdminRequest {
    string name = 1;
    string email = 2;
    string passwordPlainText = 3;
}
message CreateAdminResponse {
    Admin admin = 1;
}

message GetAdminRequest {
    string adminID = 1;
}
message GetAdminResponse {
    Admin admin = 1;
}

message Admin {
    string adminID = 1;
    string name = 2;
    string email = 3;
    string password = 4;
    string ACL = 5;
}

message Sponsor {
    string id = 1;
    string name = 2;
    string email = 3;
    string password = 4;
    Company company = 5;
    string ACL = 6;
}

message Company {
    string id = 1;
	string name = 2;
	string logo = 3;
}